--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
+  "devDependencies": {
+    "prisma": "^6.16.2"
+  },
   "dependencies": {
-    "prisma": "^6.16.0"
+    "@prisma/client": "^6.16.2"
   }
 }
